<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.sprout.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.sprout.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.sprout.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@+id/SecondFragment"/>
        <action
            android:id="@+id/action_ThirdFragment_to_ThirdFragment2"
            app:destination="@+id/ThirdFragment2"/>
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment2"
        android:name="com.example.sprout.ThirdFragment2"
        android:label="@string/third_fragment2_label"
        tools:layout="@layout/fragment_third2">
        <action
            android:id="@+id/action_ThirdFragment2_to_ThirdFragment"
            app:destination="@+id/ThirdFragment"/>
        <action
            android:id="@+id/action_ThirdFragment2_to_ThirdFragment3"
            app:destination="@+id/ThirdFragment3"/>
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment3"
        android:name="com.example.sprout.ThirdFragment3"
        android:label="@string/third_fragment3_label"
        tools:layout="@layout/fragment_third3">
        <action
            android:id="@+id/action_ThirdFragment3_to_ThirdFragment2"
            app:destination="@+id/ThirdFragment2"/>
        <action
            android:id="@+id/action_ThirdFragment3_to_FourthFragment"
            app:destination="@+id/fragment_fourth"/>
    </fragment>
    <fragment
        android:id="@+id/fragment_fourth"
        android:name="com.example.sprout.fragment_fourth"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth">
        <action
            android:id="@+id/action_fragment4_to_ThirdFragment3"
            app:destination="@+id/ThirdFragment3"/>
    </fragment>
</navigation>